<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/server_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/bg"
        android:padding="14dp" >

        <TableLayout
            android:id="@+id/table"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TableRow>

                <TextView
                    android:id="@+id/indicationUri"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:paddingRight="10dp"
                    android:text="@string/uri"
                    android:textColor="@android:color/white" />

                <EditText
                    android:id="@+id/uri"
                    style="@style/EditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_margin="0dp"
                    android:inputType="textUri"
                    android:singleLine="true"
                    android:text="@string/default_stream" >
                </EditText>
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/indicationUsername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:paddingRight="10dp"
                    android:text="@string/username"
                    android:textColor="@android:color/white" />

                <EditText
                    android:id="@+id/username"
                    style="@style/EditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:inputType="text"
                    android:singleLine="true"
                    android:text="@string/username_hint" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:paddingRight="10dp"
                    android:singleLine="true"
                    android:text="@string/password"
                    android:textColor="@android:color/white" />

                <EditText
                    android:id="@+id/password"
                    style="@style/EditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:inputType="textVisiblePassword"
                    android:singleLine="true"
                    android:hint="@string/password_hint" />
            </TableRow>
        </TableLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/table"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/video" />
            
            <Button
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save" />
            
        </LinearLayout>
    </RelativeLayout>

</FrameLayout>